<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vicon4px4</name>
  <version>1.0.0</version>
  <description>Vicon4PX4 -- A ROS 2 Vicon to PX4 External Vision Bridge</description>
  <maintainer email="egm@gatech.edu">Evanns Morales</maintainer>
  <license>GNU General Public License v3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>mocap_msgs</depend>

  <exec_depend>mocap_px4_relays</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>